--- a/javascript/EXAM/src/sass/main.scss
+++ b/javascript/EXAM/src/sass/main.scss
@@ -2,7 +2,7 @@
         'fonts',
         'variables';
 
-//@import 'components/carousel';
+@import 'carousel';
 
 @import 'mobile',
         'tablet',
