--- a/javascript/EXAM/src/sass/_mobile.scss
+++ b/javascript/EXAM/src/sass/_mobile.scss
@@ -1,329 +1,280 @@
-/*BEGIN HEADER*/
-
+//******HEADER******
 .header {
-  min-height: 442px;
-  min-width: 320px;
-  padding: 32px 20px 67px 20px;
-  background: #cccccc url(../img/bg_header.jpg) center no-repeat;
-  background-size: cover;
-  text-align: center;
+	min-height: 442px;
+	min-width: 280px;
+	padding: 32px 20px 67px 20px;
+	background: #cccccc url(../img/bg_header.jpg) center no-repeat;
+	background-size: cover;
+	text-align: center;
 }
 
 .login {
-  width: 165px;
-  margin: 0 auto;
-
-  &__link {
-    font: 14px $MontserratBold;
-    color: #fff;
-    float: left;
-    text-decoration: none;
-    border: 2px solid transparent;
-    padding: 8px 15px;
-
-
-    &:hover {
-      border: 2px solid #fff;
-      border-radius: 20px;
-
-    }
-  }
+	width: 155px;
+	margin: 0 auto;
+	&__link {
+		font: 14px $MontserratBold;
+		color: #fff;
+		float: left;
+		border: 2px solid transparent;
+		border-radius: 20px;
+		padding: 8px 15px;
+		&:hover {
+			border: 2px solid #fff;
+			border-radius: 20px;
+			transition: $transitionDuration;
+		}
+	}
 }
 
 .logo {
-  margin-top: 116px;
-
-  a {
-    font: 20px $MontserratBold;
-    color: #fff;
-  }
+	margin-top: 116px;
+	a {
+		font: 20px $MontserratBold;
+		color: #fff;
+	}
 }
 
-.header__title {
-  margin-top: 29px;
-  font: 29px $MontserratBold;
-  color: #fff;
-  text-transform: uppercase;
+.title {
+	margin-top: 29px;
+	font: 29px $MontserratBold;
+	color: #fff;
+	text-transform: uppercase;
 }
 
-.header__description {
-  max-width: 220px;
-  margin: 8px auto 0;
-  font: 18px $Roboto;
-  color: #fff;
+.descr {
+	margin-top: 8px;
+	font: 18px $RobotoLight;
+	color: #fff;
 }
 
 .header .btn-search-partner {
-  @extend %btn-partner;
-  margin-top: 12px;
+	@extend %btn-search-partner;
+	margin-top: 12px;
+	&:hover {
+		background: #EC4547;
+		//transition: $transitionDuration;
 
-  &:hover {
-    background: $btn-bg-hover;
-  }
+	}
 }
 
-/*END HEADER*/
-
-/*BEGIN HOW*/
-
-.container {
-  padding: 34px 10px 0 10px;
-  text-align: center;
+//******HOW-WORKS******
+.wrapper {
+	padding: 34px 10px 0 10px;
+	text-align: center;
 }
 
-.how h2 {
-  margin-bottom: 4px;
+.how-works h2 {
+	margin-bottom: 4px;
 }
 
 .step {
-  margin: 10px auto 0 auto;
-  padding: 69px 19px 5px 19px;
-  border-radius: 5px;
-  text-align: left;
-
-  &__btn {
-    display: inline-block;
-    padding: 4px 8px;
-    background: $btn-bg;
-    border-radius: 20px;
-    font: 10px $MontserratRegular;
-    color: $color-1;
-    text-transform: uppercase;
-    letter-spacing: 4px;
-
-    &:hover {
-      background: $btn-bg-hover;
-    }
-  }
-
-  &__title {
-    margin-top: 15px;
-    font: 24px $MontserratBold;
-    color: #fff;
-  }
-
-  &__text {
-    margin-top: 10px;
-    font: 14px/17px $Roboto;
-    color: #ccc;
-  }
-
-  &--bg1 {
-    width: 262px;
-    height: 166px;
-    background: #ccc url(../img/step-1.jpg) 0 0 no-repeat;
-  }
-
-  &--bg2-and-padding {
-    width: 262px;
-    height: 137px;
-    padding: 99px 19px 4px 19px;
-    background: #ccc url(../img/step-2.jpg) 0 0 no-repeat;
-  }
-
-  &--bg3 {
-    width: 262px;
-    height: 162px;
-    background: #ccc url(../img/step-3.jpg) 0 0 no-repeat;
-  }
+	margin: 10px auto 0 auto;
+	padding: 69px 19px 5px 19px;
+	border-radius: 5px;
+	text-align: left;
+	&__btn {
+		display: inline-block;
+		padding: 4px 8px;
+		background: $btn-bg;
+		border-radius: 20px;
+		font: 10px $MontserratRegular;
+		color: $btn-color;
+		text-transform: uppercase;
+		letter-spacing: 4px;
+		&:hover {
+			background: #EC4547;
+		}
+	}
+	&__title {
+		margin-top: 15px;
+		font: 24px $MontserratBold;
+		color: #fff;
+	}
+	&__text {
+		margin-top: 10px;
+		font: 14px/17px $RobotoLight;
+		color: #ccc;
+	}
+	&--bg1 {
+		width: 300px - 19px - 19px;
+		height: 267px - 81px - 20px;
+		background: #ccc url(../img/step-1.jpg) 0 0 no-repeat;
+	}
+	&--bg2-and-padding {
+		width: 300px - 19px - 19px;
+		height: 259px - 102px - 20px;
+		padding: 99px 19px 4px 19px;
+		background: #ccc url(../img/step-2.jpg) 0 0 no-repeat;
+	}
+	&--bg3 {
+		width: 300px - 19px - 19px;
+		height: 263px - 81px - 20px;
+		background: #ccc url(../img/step-3.jpg) 0 0 no-repeat;
+	}
 }
 
-/*END HOW*/
-
-/*BEGIN PARTNER*/
-
-.partner {
-  padding-top: 39px;
+//******MEET-PARTNER******
+.meet-partner {
+	padding-top: 39px;
 }
 
 .partner {
-  width: 220px;
-  margin: 24px auto;
-  text-align: center;
-  
-  &__photo-wrap {
-    width: 125px;
-    margin: 0 auto;
-    position: relative;
-    
-    a {
-      display: block;
-    }
-
-    &--add-icon-1:after {
-      content: url("../img/icon-partner-1.png");
-      width: 41px;
-      height: 41px;
-      position: absolute;
-      right: -2px;
-      bottom: -2px;
-    }
-
-    &--add-icon-2:after {
-      @extend .partner__photo-wrap--add-icon-1;
-      content: url("../img/icon-partner-2.png");
-    }
-
-    &--add-icon-3:after {
-      @extend .partner__photo-wrap--add-icon-1;
-      content: url("../img/icon-partner-3.png");
-    }
-
-    &--add-icon-4:after {
-      @extend .partner__photo-wrap--add-icon-1;
-      content: url("../img/icon-partner-4.png");
-    }
-  }
-
-  &__name {
-    margin-top: 15px;
-    font: 14px $MontserratBold;
-    color: #333;
-  }
-
-  &__about {
-    margin-top: 11px;
-    font: 14px $Roboto;
-    color: #666;
-  }
-
-  &--margin {
-    margin-top: 12px;
-  }
+	width: 220px;
+	margin: 24px auto;
+	text-align: center;
+	&__photo-wrap {
+		width: 125px;
+		margin: 0 auto;
+		position: relative;
+		a {
+			display: block;
+		}
+		&--add-icon-1:after {
+			content: url("../img/icon-partner-1.png");
+			width: 41px;
+			height: 41px;
+			position: absolute;
+			right: -2px;
+			bottom: -2px;
+		}
+		&--add-icon-2:after {
+			@extend .partner__photo-wrap--add-icon-1;
+			content: url("../img/icon-partner-2.png");
+		}
+		&--add-icon-3:after {
+			@extend .partner__photo-wrap--add-icon-1;
+			content: url("../img/icon-partner-3.png");
+		}
+		&--add-icon-4:after {
+			@extend .partner__photo-wrap--add-icon-1;
+			content: url("../img/icon-partner-4.png");
+		}
+	}
+	&__name {
+		margin-top: 15px;
+		font: 14px $MontserratBold;
+		color: #333;
+	}
+	&__about {
+		margin-top: 11px;
+		font: 14px $RobotoLight;
+		color: #666;
+	}
+	&--margin {
+		margin-top: 12px;
+	}
 }
 
-.partner .btn-more-partners {
-  display: block;
-  width: 280px;
-  padding: 10px 0;
-  border: 2px solid #ff4e50;
-  border-radius: 20px;
-  margin: -4px auto;
-  font: 14px $MontserratBold;
-  color: #ff4e50;
-
-  &:hover {
-    border: 2px solid $btn-bg-hover;
-    background: $btn-bg-hover;
-    color: #fff;
-  }
+.meet-partner .btn-more-partners {
+	display: block;
+	width: 280px;
+	padding: 10px 0;
+	border: 2px solid #ff4e50;
+	border-radius: 20px;
+	margin: -4px auto;
+	font: 14px $MontserratBold;
+	color: #ff4e50;
+	&:hover {
+		border: 2px solid #EC4547;
+		background: #EC4547;
+		color: #fff;
+	}
 }
 
-/*END PARTNER*/
-
-/*BEGIN IDEAS*/
-
-.ideas{
-  margin-top: 37px;
+//******HOLIDAY-IDEAS******
+.holiday-ideas {
+	margin-top: 37px;
 }
 
-.ideas h2 {
-  margin: 27px 0 8px 0;
+.holiday-ideas h2 {
+	margin: 27px 0 8px 0;
 }
 
 .tile {
-  margin: 5px 0;
-  position: relative;
-
-  &__tag {
-    font: 22px $MontserratBold;
-    color: #fff;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-  }
-
-  &__img {
-    width: 100%;
-    border-radius: 5px;
-  }
+	margin: 5px 0;
+	position: relative;
+	&__tag {
+		font: 22px $MontserratBold;
+		color: #fff;
+		position: absolute;
+		left: 50%;
+		top: 50%;
+		transform: translate(-50%, -50%);
+	}
+	&__img {
+		width: 100%;
+		border-radius: 5px;
+	}
 }
 
 .form-search-partner {
-  margin-top: 7px;
-
-  &__title {
-    font: 18px $Roboto;
-    color: #333;
-  }
-
-  &__field {
-    width: 280px - 15px - 15px;
-    margin-top: 16px;
-    padding: 9px 15px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    font: 14px $Roboto;
-    color: #999;
-  }
-
-  &__btn {
-    @extend %btn-partner;
-    margin-top: 10px;
-    border: none;
-    cursor: pointer;
-
-    &:hover {
-      background: $btn-bg-hover;
-    }
-  }
+	margin-top: 7px;
+	&__title {
+		font: 18px $RobotoLight;
+		color: #333;
+	}
+	&__field {
+		width: 280px - 15px - 15px;
+		margin-top: 16px;
+		padding: 9px 15px;
+		border: 1px solid #ccc;
+		border-radius: 5px;
+		font: 14px $RobotoLight;
+		color: #999;
+	}
+	&__btn {
+		@extend %btn-search-partner;
+		margin-top: 10px;
+		border: none;
+		cursor: pointer;
+		&:hover {
+			background: #EC4547;
+		}
+	}
 }
 
-/*END IDEAS*/
-
-/*BEGIN FOOTER*/
-
+//******FOOTER******
 .footer {
-  padding: 16px 10px 17px 10px;
-  border-top: 4px solid #ff4e50;
-  margin-top: 41px;
-  text-align: center;
-
-  .logo-footer a {
-    font: 16px $MontserratBold;
-    color: #ff4e50;
-  }
-
-  .company, .partners {
-    margin-top: 12px;
-    font: 14px $MontserratBold;
-    color: #333;
-  }
+	padding: 16px 10px 17px 10px;
+	border-top: 4px solid #ff4e50;
+	margin-top: 41px;
+	text-align: center;
+	.logo-footer a {
+		font: 16px $MontserratBold;
+		color: #ff4e50;
+	}
+	.company, .partners {
+		margin-top: 12px;
+		font: 14px $MontserratBold;
+		color: #333;
+	}
 }
 
 .developer {
-  margin-top: 15px;
-
-  &__designed {
-    font: 10px $MontserratBold;
-    color: #ccc;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-  }
-
-  &__logo {
-    margin-top: 10px;
-  }
+	margin-top: 15px;
+	&__designed {
+		font: 10px $MontserratBold;
+		color: #ccc;
+		text-transform: uppercase;
+		letter-spacing: 1px;
+	}
+	&__logo {
+		margin-top: 10px;
+	}
 }
 
 .nav {
-  width: 210px;
-  margin: 0 auto;
-
-  &__item {
-    margin-left: 13px;
-    float: left;
-  }
-
-  &__link {
-    font: 14px $Roboto;
-    color: #666;
-
-    &:hover {
-      color: $btn-bg-hover;
-    }
-  }
+	width: 210px;
+	margin: 0 auto;
+	&__item {
+		margin-left: 13px;
+		float: left;
+	}
+	&__link {
+		font: 14px $RobotoLight;
+		color: #666;
+		&:hover {
+			color: #EC4547;
+		}
+	}
 }
-
-/*END FOOTER*/
