Modifed ie8.scss

--- a/javascript/EXAM/src/sass/ie8.scss
+++ b/javascript/EXAM/src/sass/ie8.scss
@@ -4,6 +4,70 @@
 
 @import 'components/carousel';
 
-@import 'mobile',
-        'tablet',
-        'desktop';
+//******HEADER******
+.header {
+        min-height: 442px;
+        min-width: 977px;
+        padding: 50px 0 212px 0;
+        background: #cccccc url(../img/bg_header.jpg) center no-repeat;
+        background-size: cover;
+        text-align: center;
+        .wrap {
+                padding: 0 10px;
+        }
+}
+
+.header .wrap,
+.wrapper {
+        max-width: 960px - 10px - 10px;
+        margin: 0 auto;
+}
+
+.login {
+        width: 165px;
+        margin: 0;
+        float: right;
+        &__link {
+                font: 14px $MontserratBold;
+                color: #fff;
+                float: left;
+                border: 2px solid transparent;
+                border-radius: 20px;
+                padding: 8px 15px;
+                &:hover {
+                        border: 2px solid #fff;
+                        border-radius: 20px;
+                        transition: $transitionDuration;
+                }
+        }
+}
+
+.logo {
+        margin: 0;
+        float: left;
+        a {
+                font: 20px $MontserratBold;
+                color: #fff;
+        }
+}
+
+.title {
+        margin-top: 144px;
+        font: 52px $MontserratBold;
+        color: #fff;
+        text-transform: uppercase;
+}
+.descr {
+        margin-top: 21px;
+        font: 24px $RobotoLight;
+        color: #fff;
+}
+
+.header .btn-search-partner {
+        @extend %btn-search-partner;
+        margin-top: 32px;
+        width: 230px;
+        &:hover {
+                background: #EC4547;
+        }
+}
