--- a/javascript/EXAM/src/sass/ie8.scss
+++ b/javascript/EXAM/src/sass/ie8.scss
@@ -72,6 +72,94 @@
         }
 }
 
+//******MEET-PARTNER******
+
+.meet-partner {
+        padding-top: 95px;
+}
+
+.meet-partner h2 {
+        margin-bottom: 35px;
+}
+
+.partner {
+        width: 220px;
+        margin: 24px auto;
+        text-align: center;
+        &__photo-wrap {
+                width: 125px;
+                margin: 0 auto;
+                position: relative;
+                a {
+                        display: block;
+                }
+                &--add-icon-1:after {
+                        content: url("../img/icon-partner-1.png");
+                        width: 41px;
+                        height: 41px;
+                        position: absolute;
+                        right: -2px;
+                        bottom: -2px;
+                }
+                &--add-icon-2:after {
+                        @extend .partner__photo-wrap--add-icon-1;
+                        content: url("../img/icon-partner-2.png");
+                }
+                &--add-icon-3:after {
+                        @extend .partner__photo-wrap--add-icon-1;
+                        content: url("../img/icon-partner-3.png");
+                }
+                &--add-icon-4:after {
+                        @extend .partner__photo-wrap--add-icon-1;
+                        content: url("../img/icon-partner-4.png");
+                }
+        }
+        &__name {
+                margin-top: 15px;
+                font: 14px $MontserratBold;
+                color: #333;
+        }
+        &__about {
+                margin-top: 11px;
+                font: 14px $RobotoLight;
+                color: #666;
+        }
+        &--margin {
+                margin-top: 12px;
+        }
+}
+
+.partner-wrap {
+        width: 25%;
+        float: left;
+}
+
+.partner {
+        margin-top: 0;
+        &--margin {
+                margin-top: 0;
+        }
+        &--margin-top {
+                margin-top: 0px;
+        }
+}
+
+.meet-partner .btn-more-partners {
+        display: block;
+        width: 190px;
+        padding: 10px 0;
+        border: 2px solid #ff4e50;
+        border-radius: 20px;
+        margin: -4px auto;
+        font: 14px $MontserratBold;
+        color: #ff4e50;
+        &:hover {
+                border: 2px solid #EC4547;
+                background: #EC4547;
+                color: #fff;
+        }
+}
+
 //******FOOTER******
 
 .footer {
