--- a/javascript/EXAM/src/sass/ie8.scss
+++ b/javascript/EXAM/src/sass/ie8.scss
@@ -2,7 +2,7 @@
         'base/fonts',
         'base/base';
 
-@import 'components/carousel';
+//@import 'components/carousel';
 
 //******HEADER******
 .header {
@@ -138,6 +138,52 @@
                 height: 263px - 81px - 20px;
                 background: #ccc url(../img/step-3-lg.jpg) 0 0 no-repeat;
         }
+}
+
+//******CAROUSEL******
+
+.wrap-need-for-arrows,
+.jcarousel {
+        width: 301px;
+        margin: 0 auto;
+        position: relative;
+        overflow: hidden;
+        &__item-2,
+        &__item-3 {
+                display: block;
+        }
+}
+
+.jcarousel ul {
+        width: 20000em;
+        padding: 0;
+        margin: 0;
+        position: relative;
+        list-style: none;
+}
+
+.jcarousel li {
+        float: left;
+}
+
+/** Carousel Controls **/
+
+.jcarousel-control-prev,
+.jcarousel-control-next {
+        display: block;
+        width: 30px;
+        height: 56px;
+        position: absolute;
+}
+
+.jcarousel-control-prev {
+        left: 20px;
+        top: 162px;
+}
+
+.jcarousel-control-next {
+        right: 20px;
+        top: 162px;
 }
 
 //******MEET-PARTNER******
