--- a/loftschool/dz_webinar8/css/_misc/adjustment.scss
+++ b/loftschool/dz_webinar8/css/_misc/adjustment.scss
@@ -1,3 +1,8 @@
+// adjustment vars
+
+$footer-height: 50px;
+$container-width: 940px;
+
 body, html {
 	width: 100%;
 	height: 100%;
@@ -12,7 +17,7 @@ body {
 
 .wrapper {
 	min-height: 100%;
-	min-width: 960px;
+	min-width: $container-width + 20px;
 	overflow: hidden;
 	position: relative;
 }
@@ -20,7 +25,7 @@ body {
 .wrapper:after {
 	content: "";
 	display: block;
-	height: 50px;
+	height: $footer-height;
 	overflow: hidden;
 	position: relative;
 }
@@ -30,7 +35,7 @@ body {
 }
 
 .container{
-	width: 940px;
+	width: $container-width;
 	margin: 0 auto;
 }
 
@@ -46,9 +51,9 @@ li {
 
 .footer {
 	background: #ccc;
-	height: 50px;
-	min-width: 960px;
+	height: $footer-height;
+	min-width: $container-width + 20px;
 	width: 100%;
-	margin-top: -50px;
+	margin-top: -$footer-height;
 	position: relative;
 }
